A3/Part1/cyrix.output
Rules useless in parser due to conflicts

   84 lhs_list: IDENTIFIER


State 28 conflicts: 1 shift/reduce
State 105 conflicts: 7 shift/reduce
State 108 conflicts: 1 shift/reduce
State 110 conflicts: 3 shift/reduce
State 111 conflicts: 2 shift/reduce
State 112 conflicts: 2 shift/reduce
State 113 conflicts: 5 shift/reduce
State 114 conflicts: 2 shift/reduce
State 115 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 149 conflicts: 11 shift/reduce
State 164 conflicts: 2 reduce/reduce
State 214 conflicts: 2 reduce/reduce
State 254 conflicts: 1 shift/reduce
State 255 conflicts: 1 shift/reduce
State 310 conflicts: 3 shift/reduce
State 311 conflicts: 3 shift/reduce
State 312 conflicts: 2 shift/reduce
State 313 conflicts: 2 shift/reduce
State 314 conflicts: 2 shift/reduce
State 315 conflicts: 2 shift/reduce
State 316 conflicts: 2 shift/reduce
State 317 conflicts: 2 shift/reduce
State 318 conflicts: 2 shift/reduce
State 319 conflicts: 5 shift/reduce
State 320 conflicts: 5 shift/reduce
State 321 conflicts: 2 shift/reduce
State 322 conflicts: 1 shift/reduce
State 323 conflicts: 1 shift/reduce
State 324 conflicts: 1 shift/reduce
State 325 conflicts: 1 shift/reduce
State 395 conflicts: 1 shift/reduce
State 434 conflicts: 2 reduce/reduce
State 451 conflicts: 1 shift/reduce
State 467 conflicts: 1 shift/reduce
State 517 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 lambda_params: IDENTIFIER
    2              | lambda_params ',' IDENTIFIER

    3 lambda_expression: '(' ')' LAMBDA_ARROW expression
    4                  | '(' ')' LAMBDA_ARROW compound_statement
    5                  | '(' lambda_params ')' LAMBDA_ARROW expression
    6                  | '(' lambda_params ')' LAMBDA_ARROW compound_statement

    7 primary_expression: IDENTIFIER
    8                   | constant
    9                   | string
   10                   | '(' expression ')'
   11                   | generic_selection
   12                   | lambda_expression

   13 constant: I_CONSTANT
   14         | F_CONSTANT
   15         | ENUMERATION_CONSTANT

   16 enumeration_constant: IDENTIFIER

   17 string: STRING_LITERAL
   18       | FUNC_NAME

   19 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   20 generic_assoc_list: generic_association
   21                   | generic_assoc_list ',' generic_association

   22 generic_association: type_name ':' assignment_expression
   23                    | DEFAULT ':' assignment_expression

   24 postfix_expression: primary_expression
   25                   | postfix_expression '[' expression ']'
   26                   | postfix_expression '(' ')'
   27                   | postfix_expression '(' argument_expression_list ')'
   28                   | postfix_expression '.' IDENTIFIER
   29                   | postfix_expression PTR_OP IDENTIFIER
   30                   | postfix_expression SAFE_DOT IDENTIFIER
   31                   | postfix_expression INC_OP
   32                   | postfix_expression DEC_OP
   33                   | '(' type_name ')' '{' initializer_list '}'
   34                   | '(' type_name ')' '{' initializer_list ',' '}'

   35 argument_expression_list: assignment_expression
   36                         | argument_expression_list ',' assignment_expression

   37 unary_expression: postfix_expression
   38                 | INC_OP unary_expression
   39                 | DEC_OP unary_expression
   40                 | unary_operator cast_expression
   41                 | SIZEOF unary_expression
   42                 | SIZEOF '(' type_name ')'
   43                 | ALIGNOF '(' type_name ')'

   44 unary_operator: '&'
   45               | '*'
   46               | '+'
   47               | '-'
   48               | '~'
   49               | '!'

   50 cast_expression: unary_expression
   51                | '(' type_name ')' cast_expression

   52 power_expression: cast_expression
   53                 | cast_expression POW_OP power_expression

   54 multiplicative_expression: power_expression
   55                          | multiplicative_expression '*' power_expression
   56                          | multiplicative_expression '/' power_expression
   57                          | multiplicative_expression '%' power_expression

   58 additive_expression: multiplicative_expression
   59                    | additive_expression '+' multiplicative_expression
   60                    | additive_expression '-' multiplicative_expression

   61 shift_expression: additive_expression
   62                 | shift_expression LEFT_OP additive_expression
   63                 | shift_expression RIGHT_OP additive_expression

   64 relational_expression: shift_expression
   65                      | relational_expression '<' shift_expression
   66                      | relational_expression '>' shift_expression
   67                      | relational_expression LE_OP shift_expression
   68                      | relational_expression GE_OP shift_expression
   69                      | relational_expression TH_OP shift_expression

   70 equality_expression: relational_expression
   71                    | equality_expression EQ_OP relational_expression
   72                    | equality_expression NE_OP relational_expression

   73 and_expression: equality_expression
   74               | and_expression '&' equality_expression

   75 exclusive_or_expression: and_expression
   76                        | exclusive_or_expression '^' and_expression

   77 inclusive_or_expression: exclusive_or_expression
   78                        | inclusive_or_expression '|' exclusive_or_expression

   79 logical_and_expression: inclusive_or_expression
   80                       | logical_and_expression AND_OP inclusive_or_expression

   81 logical_or_expression: logical_and_expression
   82                      | logical_or_expression OR_OP logical_and_expression

   83 conditional_expression: logical_or_expression

   84 lhs_list: IDENTIFIER
   85         | lhs_list ',' IDENTIFIER

   86 rhs_list: assignment_expression
   87         | rhs_list ',' assignment_expression

   88 multi_assignment: lhs_list '=' rhs_list

   89 assignment_expression: conditional_expression
   90                      | unary_expression assignment_operator assignment_expression

   91 assignment_operator: '='
   92                    | MUL_ASSIGN
   93                    | DIV_ASSIGN
   94                    | MOD_ASSIGN
   95                    | ADD_ASSIGN
   96                    | SUB_ASSIGN
   97                    | LEFT_ASSIGN
   98                    | RIGHT_ASSIGN
   99                    | AND_ASSIGN
  100                    | XOR_ASSIGN
  101                    | OR_ASSIGN

  102 expression: assignment_expression
  103           | expression ',' assignment_expression

  104 constant_expression: conditional_expression

  105 var_init_list: var_init
  106              | var_init_list ',' var_init

  107 var_init: IDENTIFIER '=' assignment_expression

  108 var_declaration: VAR var_init_list ';'

  109 declaration: declaration_specifiers ';'
  110            | declaration_specifiers init_declarator_list ';'
  111            | static_assert_declaration
  112            | var_declaration

  113 declaration_specifiers: storage_class_specifier declaration_specifiers
  114                       | storage_class_specifier
  115                       | type_specifier declaration_specifiers
  116                       | type_specifier
  117                       | type_qualifier declaration_specifiers
  118                       | type_qualifier
  119                       | function_specifier declaration_specifiers
  120                       | function_specifier
  121                       | alignment_specifier declaration_specifiers
  122                       | alignment_specifier

  123 init_declarator_list: init_declarator
  124                     | init_declarator_list ',' init_declarator

  125 init_declarator: declarator '=' initializer
  126                | declarator

  127 storage_class_specifier: TYPEDEF
  128                        | EXTERN
  129                        | STATIC
  130                        | THREAD_LOCAL
  131                        | AUTO
  132                        | REGISTER

  133 type_specifier: VOID
  134               | CHAR
  135               | SHORT
  136               | INT
  137               | LONG
  138               | FLOAT
  139               | DOUBLE
  140               | SIGNED
  141               | UNSIGNED
  142               | BOOL
  143               | COMPLEX
  144               | IMAGINARY
  145               | atomic_type_specifier
  146               | struct_or_union_specifier
  147               | enum_specifier
  148               | TYPEDEF_NAME

  149 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  150                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  151                          | struct_or_union IDENTIFIER

  152 struct_or_union: STRUCT
  153                | UNION

  154 struct_declaration_list: struct_declaration
  155                        | struct_declaration_list struct_declaration

  156 struct_declaration: specifier_qualifier_list ';'
  157                   | specifier_qualifier_list struct_declarator_list ';'
  158                   | static_assert_declaration

  159 specifier_qualifier_list: type_specifier specifier_qualifier_list
  160                         | type_specifier
  161                         | type_qualifier specifier_qualifier_list
  162                         | type_qualifier

  163 struct_declarator_list: struct_declarator
  164                       | struct_declarator_list ',' struct_declarator

  165 struct_declarator: ':' constant_expression
  166                  | declarator ':' constant_expression
  167                  | declarator

  168 enum_specifier: ENUM '{' enumerator_list '}'
  169               | ENUM '{' enumerator_list ',' '}'
  170               | ENUM IDENTIFIER '{' enumerator_list '}'
  171               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  172               | ENUM IDENTIFIER

  173 enumerator_list: enumerator
  174                | enumerator_list ',' enumerator

  175 enumerator: enumeration_constant '=' constant_expression
  176           | enumeration_constant

  177 atomic_type_specifier: ATOMIC '(' type_name ')'

  178 type_qualifier: CONST
  179               | RESTRICT
  180               | VOLATILE
  181               | ATOMIC

  182 function_specifier: INLINE
  183                   | NORETURN

  184 alignment_specifier: ALIGNAS '(' type_name ')'
  185                    | ALIGNAS '(' constant_expression ')'

  186 declarator: pointer direct_declarator
  187           | direct_declarator

  188 direct_declarator: IDENTIFIER
  189                  | '(' declarator ')'
  190                  | direct_declarator '[' ']'
  191                  | direct_declarator '[' '*' ']'
  192                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  193                  | direct_declarator '[' STATIC assignment_expression ']'
  194                  | direct_declarator '[' type_qualifier_list '*' ']'
  195                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  196                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  197                  | direct_declarator '[' type_qualifier_list ']'
  198                  | direct_declarator '[' assignment_expression ']'
  199                  | direct_declarator '(' parameter_type_list ')'
  200                  | direct_declarator '(' ')'
  201                  | direct_declarator '(' identifier_list ')'

  202 pointer: '*' type_qualifier_list pointer
  203        | '*' type_qualifier_list
  204        | '*' pointer
  205        | '*'

  206 type_qualifier_list: type_qualifier
  207                    | type_qualifier_list type_qualifier

  208 parameter_type_list: parameter_list ',' ELLIPSIS
  209                    | parameter_list

  210 parameter_list: normal_param_list
  211               | normal_param_list ',' default_param_list
  212               | default_param_list

  213 normal_param_list: normal_param
  214                  | normal_param_list ',' normal_param

  215 default_param_list: default_param
  216                   | default_param_list ',' default_param

  217 normal_param: declaration_specifiers declarator
  218             | declaration_specifiers abstract_declarator
  219             | declaration_specifiers

  220 default_param: declaration_specifiers declarator '=' assignment_expression

  221 identifier_list: IDENTIFIER
  222                | identifier_list ',' IDENTIFIER

  223 type_name: specifier_qualifier_list abstract_declarator
  224          | specifier_qualifier_list

  225 abstract_declarator: pointer direct_abstract_declarator
  226                    | pointer
  227                    | direct_abstract_declarator

  228 direct_abstract_declarator: '(' abstract_declarator ')'
  229                           | '[' ']'
  230                           | '[' '*' ']'
  231                           | '[' STATIC type_qualifier_list assignment_expression ']'
  232                           | '[' STATIC assignment_expression ']'
  233                           | '[' type_qualifier_list STATIC assignment_expression ']'
  234                           | '[' type_qualifier_list assignment_expression ']'
  235                           | '[' type_qualifier_list ']'
  236                           | '[' assignment_expression ']'
  237                           | direct_abstract_declarator '[' ']'
  238                           | direct_abstract_declarator '[' '*' ']'
  239                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  240                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  241                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  242                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  243                           | direct_abstract_declarator '[' type_qualifier_list ']'
  244                           | direct_abstract_declarator '[' assignment_expression ']'
  245                           | '(' ')'
  246                           | '(' parameter_type_list ')'
  247                           | direct_abstract_declarator '(' ')'
  248                           | direct_abstract_declarator '(' parameter_type_list ')'

  249 initializer: '{' initializer_list '}'
  250            | '{' initializer_list ',' '}'
  251            | assignment_expression

  252 initializer_list: designation initializer
  253                 | initializer
  254                 | initializer_list ',' designation initializer
  255                 | initializer_list ',' initializer

  256 designation: designator_list '='

  257 designator_list: designator
  258                | designator_list designator

  259 designator: '[' constant_expression ']'
  260           | '.' IDENTIFIER

  261 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  262 statement: labeled_statement
  263          | compound_statement
  264          | expression_statement
  265          | selection_statement
  266          | iteration_statement
  267          | jump_statement

  268 labeled_statement: IDENTIFIER ':' statement
  269                  | CASE constant_expression ':' statement
  270                  | DEFAULT ':' statement

  271 compound_statement: '{' '}'
  272                   | '{' block_item_list '}'

  273 block_item_list: block_item
  274                | block_item_list block_item

  275 block_item: declaration
  276           | statement

  277 expression_statement: ';'
  278                     | expression ';'
  279                     | multi_assignment ';'

  280 match_statement: MATCH '(' expression ')' '{' case_list default_opt '}'

  281 case_list: case_list match_case
  282          | match_case

  283 match_case: CASE constant_expression ':' statement

  284 default_opt: ε
  285            | DEFAULT ':' statement

  286 selection_statement: IF '(' expression ')' statement ELSE statement
  287                    | IF '(' expression ')' statement
  288                    | SWITCH '(' expression ')' statement
  289                    | match_statement

  290 foreach_var: IDENTIFIER
  291            | type_specifier IDENTIFIER

  292 iteration_statement: WHILE '(' expression ')' statement
  293                    | DO statement WHILE '(' expression ')' ';'
  294                    | FOR '(' expression_statement expression_statement ')' statement
  295                    | FOR '(' expression_statement expression_statement expression ')' statement
  296                    | FOR '(' declaration expression_statement ')' statement
  297                    | FOR '(' declaration expression_statement expression ')' statement
  298                    | FOREACH '(' foreach_var IN expression ')' statement

  299 jump_statement: GOTO IDENTIFIER ';'
  300               | CONTINUE ';'
  301               | BREAK ';'
  302               | RETURN ';'
  303               | RETURN expression ';'

  304 translation_unit: external_declaration
  305                 | translation_unit external_declaration

  306 external_declaration: function_definition
  307                     | declaration

  308 function_definition: declaration_specifiers declarator declaration_list compound_statement
  309                    | declaration_specifiers declarator compound_statement

  310 declaration_list: declaration
  311                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 49
    '%' (37) 57
    '&' (38) 44 74
    '(' (40) 3 4 5 6 10 19 26 27 33 34 42 43 51 177 184 185 189 199 200 201 228 245 246 247 248 261 280 286 287 288 292 293 294 295 296 297 298
    ')' (41) 3 4 5 6 10 19 26 27 33 34 42 43 51 177 184 185 189 199 200 201 228 245 246 247 248 261 280 286 287 288 292 293 294 295 296 297 298
    '*' (42) 45 55 191 194 202 203 204 205 230 238
    '+' (43) 46 59
    ',' (44) 2 19 21 34 36 85 87 103 106 124 164 169 171 174 208 211 214 216 222 250 254 255 261
    '-' (45) 47 60
    '.' (46) 28 260
    '/' (47) 56
    ':' (58) 22 23 165 166 268 269 270 283 285
    ';' (59) 108 109 110 156 157 261 277 278 279 293 299 300 301 302 303
    '<' (60) 65
    '=' (61) 88 91 107 125 175 220 256
    '>' (62) 66
    '[' (91) 25 190 191 192 193 194 195 196 197 198 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 259
    ']' (93) 25 190 191 192 193 194 195 196 197 198 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 259
    '^' (94) 76
    '{' (123) 33 34 149 150 168 169 170 171 249 250 271 272 280
    '|' (124) 78
    '}' (125) 33 34 149 150 168 169 170 171 249 250 271 272 280
    '~' (126) 48
    error (256)
    IDENTIFIER (258) 1 2 7 16 28 29 30 84 85 107 150 151 170 171 172 188 221 222 260 268 290 291 299
    I_CONSTANT (259) 13
    F_CONSTANT (260) 14
    STRING_LITERAL (261) 17 261
    FUNC_NAME (262) 18
    SIZEOF (263) 41 42
    PTR_OP (264) 29
    INC_OP (265) 31 38
    DEC_OP (266) 32 39
    LEFT_OP (267) 62
    RIGHT_OP (268) 63
    LE_OP (269) 67
    GE_OP (270) 68
    EQ_OP (271) 71
    NE_OP (272) 72
    TH_OP (273) 69
    AND_OP (274) 80
    OR_OP (275) 82
    MUL_ASSIGN (276) 92
    DIV_ASSIGN (277) 93
    MOD_ASSIGN (278) 94
    ADD_ASSIGN (279) 95
    SUB_ASSIGN (280) 96
    LEFT_ASSIGN (281) 97
    RIGHT_ASSIGN (282) 98
    AND_ASSIGN (283) 99
    XOR_ASSIGN (284) 100
    OR_ASSIGN (285) 101
    TYPEDEF_NAME (286) 148
    ENUMERATION_CONSTANT (287) 15
    VAR (288) 108
    FOREACH (289) 298
    IN (290) 298
    MATCH (291) 280
    SAFE_DOT (292) 30
    LAMBDA_ARROW (293) 3 4 5 6
    POW_OP (294) 53
    TYPEDEF (295) 127
    EXTERN (296) 128
    STATIC (297) 129 192 193 195 231 232 233 239 240 242
    AUTO (298) 131
    REGISTER (299) 132
    INLINE (300) 182
    CONST (301) 178
    RESTRICT (302) 179
    VOLATILE (303) 180
    BOOL (304) 142
    CHAR (305) 134
    SHORT (306) 135
    INT (307) 136
    LONG (308) 137
    SIGNED (309) 140
    UNSIGNED (310) 141
    FLOAT (311) 138
    DOUBLE (312) 139
    VOID (313) 133
    COMPLEX (314) 143
    IMAGINARY (315) 144
    STRUCT (316) 152
    UNION (317) 153
    ENUM (318) 168 169 170 171 172
    ELLIPSIS (319) 208
    CASE (320) 269 283
    DEFAULT (321) 23 270 285
    IF (322) 286 287
    ELSE (323) 286
    SWITCH (324) 288
    WHILE (325) 292 293
    DO (326) 293
    FOR (327) 294 295 296 297
    GOTO (328) 299
    CONTINUE (329) 300
    BREAK (330) 301
    RETURN (331) 302 303
    ALIGNAS (332) 184 185
    ALIGNOF (333) 43
    ATOMIC (334) 177 181
    GENERIC (335) 19
    NORETURN (336) 183
    STATIC_ASSERT (337) 261
    THREAD_LOCAL (338) 130


Nonterminals, with rules where they appear

    $accept (107)
        on left: 0
    lambda_params (108)
        on left: 1 2
        on right: 2 5 6
    lambda_expression (109)
        on left: 3 4 5 6
        on right: 12
    primary_expression (110)
        on left: 7 8 9 10 11 12
        on right: 24
    constant (111)
        on left: 13 14 15
        on right: 8
    enumeration_constant (112)
        on left: 16
        on right: 175 176
    string (113)
        on left: 17 18
        on right: 9
    generic_selection (114)
        on left: 19
        on right: 11
    generic_assoc_list (115)
        on left: 20 21
        on right: 19 21
    generic_association (116)
        on left: 22 23
        on right: 20 21
    postfix_expression (117)
        on left: 24 25 26 27 28 29 30 31 32 33 34
        on right: 25 26 27 28 29 30 31 32 37
    argument_expression_list (118)
        on left: 35 36
        on right: 27 36
    unary_expression (119)
        on left: 37 38 39 40 41 42 43
        on right: 38 39 41 50 90
    unary_operator (120)
        on left: 44 45 46 47 48 49
        on right: 40
    cast_expression (121)
        on left: 50 51
        on right: 40 51 52 53
    power_expression (122)
        on left: 52 53
        on right: 53 54 55 56 57
    multiplicative_expression (123)
        on left: 54 55 56 57
        on right: 55 56 57 58 59 60
    additive_expression (124)
        on left: 58 59 60
        on right: 59 60 61 62 63
    shift_expression (125)
        on left: 61 62 63
        on right: 62 63 64 65 66 67 68 69
    relational_expression (126)
        on left: 64 65 66 67 68 69
        on right: 65 66 67 68 69 70 71 72
    equality_expression (127)
        on left: 70 71 72
        on right: 71 72 73 74
    and_expression (128)
        on left: 73 74
        on right: 74 75 76
    exclusive_or_expression (129)
        on left: 75 76
        on right: 76 77 78
    inclusive_or_expression (130)
        on left: 77 78
        on right: 78 79 80
    logical_and_expression (131)
        on left: 79 80
        on right: 80 81 82
    logical_or_expression (132)
        on left: 81 82
        on right: 82 83
    conditional_expression (133)
        on left: 83
        on right: 89 104
    lhs_list (134)
        on left: 84 85
        on right: 85 88
    rhs_list (135)
        on left: 86 87
        on right: 87 88
    multi_assignment (136)
        on left: 88
        on right: 279
    assignment_expression (137)
        on left: 89 90
        on right: 19 22 23 35 36 86 87 90 102 103 107 192 193 195 196 198 220 231 232 233 234 236 239 240 241 242 244 251
    assignment_operator (138)
        on left: 91 92 93 94 95 96 97 98 99 100 101
        on right: 90
    expression (139)
        on left: 102 103
        on right: 3 5 10 25 103 278 280 286 287 288 292 293 295 297 298 303
    constant_expression (140)
        on left: 104
        on right: 165 166 175 185 259 261 269 283
    var_init_list (141)
        on left: 105 106
        on right: 106 108
    var_init (142)
        on left: 107
        on right: 105 106
    var_declaration (143)
        on left: 108
        on right: 112
    declaration (144)
        on left: 109 110 111 112
        on right: 275 296 297 307 310 311
    declaration_specifiers (145)
        on left: 113 114 115 116 117 118 119 120 121 122
        on right: 109 110 113 115 117 119 121 217 218 219 220 308 309
    init_declarator_list (146)
        on left: 123 124
        on right: 110 124
    init_declarator (147)
        on left: 125 126
        on right: 123 124
    storage_class_specifier (148)
        on left: 127 128 129 130 131 132
        on right: 113 114
    type_specifier (149)
        on left: 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148
        on right: 115 116 159 160 291
    struct_or_union_specifier (150)
        on left: 149 150 151
        on right: 146
    struct_or_union (151)
        on left: 152 153
        on right: 149 150 151
    struct_declaration_list (152)
        on left: 154 155
        on right: 149 150 155
    struct_declaration (153)
        on left: 156 157 158
        on right: 154 155
    specifier_qualifier_list (154)
        on left: 159 160 161 162
        on right: 156 157 159 161 223 224
    struct_declarator_list (155)
        on left: 163 164
        on right: 157 164
    struct_declarator (156)
        on left: 165 166 167
        on right: 163 164
    enum_specifier (157)
        on left: 168 169 170 171 172
        on right: 147
    enumerator_list (158)
        on left: 173 174
        on right: 168 169 170 171 174
    enumerator (159)
        on left: 175 176
        on right: 173 174
    atomic_type_specifier (160)
        on left: 177
        on right: 145
    type_qualifier (161)
        on left: 178 179 180 181
        on right: 117 118 161 162 206 207
    function_specifier (162)
        on left: 182 183
        on right: 119 120
    alignment_specifier (163)
        on left: 184 185
        on right: 121 122
    declarator (164)
        on left: 186 187
        on right: 125 126 166 167 189 217 220 308 309
    direct_declarator (165)
        on left: 188 189 190 191 192 193 194 195 196 197 198 199 200 201
        on right: 186 187 190 191 192 193 194 195 196 197 198 199 200 201
    pointer (166)
        on left: 202 203 204 205
        on right: 186 202 204 225 226
    type_qualifier_list (167)
        on left: 206 207
        on right: 192 194 195 196 197 202 203 207 231 233 234 235 239 241 242 243
    parameter_type_list (168)
        on left: 208 209
        on right: 199 246 248
    parameter_list (169)
        on left: 210 211 212
        on right: 208 209
    normal_param_list (170)
        on left: 213 214
        on right: 210 211 214
    default_param_list (171)
        on left: 215 216
        on right: 211 212 216
    normal_param (172)
        on left: 217 218 219
        on right: 213 214
    default_param (173)
        on left: 220
        on right: 215 216
    identifier_list (174)
        on left: 221 222
        on right: 201 222
    type_name (175)
        on left: 223 224
        on right: 22 33 34 42 43 51 177 184
    abstract_declarator (176)
        on left: 225 226 227
        on right: 218 223 228
    direct_abstract_declarator (177)
        on left: 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248
        on right: 225 227 237 238 239 240 241 242 243 244 247 248
    initializer (178)
        on left: 249 250 251
        on right: 125 252 253 254 255
    initializer_list (179)
        on left: 252 253 254 255
        on right: 33 34 249 250 254 255
    designation (180)
        on left: 256
        on right: 252 254
    designator_list (181)
        on left: 257 258
        on right: 256 258
    designator (182)
        on left: 259 260
        on right: 257 258
    static_assert_declaration (183)
        on left: 261
        on right: 111 158
    statement (184)
        on left: 262 263 264 265 266 267
        on right: 268 269 270 276 283 285 286 287 288 292 293 294 295 296 297 298
    labeled_statement (185)
        on left: 268 269 270
        on right: 262
    compound_statement (186)
        on left: 271 272
        on right: 4 6 263 308 309
    block_item_list (187)
        on left: 273 274
        on right: 272 274
    block_item (188)
        on left: 275 276
        on right: 273 274
    expression_statement (189)
        on left: 277 278 279
        on right: 264 294 295 296 297
    match_statement (190)
        on left: 280
        on right: 289
    case_list (191)
        on left: 281 282
        on right: 280 281
    match_case (192)
        on left: 283
        on right: 281 282
    default_opt (193)
        on left: 284 285
        on right: 280
    selection_statement (194)
        on left: 286 287 288 289
        on right: 265
    foreach_var (195)
        on left: 290 291
        on right: 298
    iteration_statement (196)
        on left: 292 293 294 295 296 297 298
        on right: 266
    jump_statement (197)
        on left: 299 300 301 302 303
        on right: 267
    translation_unit (198)
        on left: 304 305
        on right: 0 305
    external_declaration (199)
        on left: 306 307
        on right: 304 305
    function_definition (200)
        on left: 308 309
        on right: 306
    declaration_list (201)
        on left: 310 311
        on right: 308 311


State 0

    0 $accept: • translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    VAR            shift, and go to state 2
    TYPEDEF        shift, and go to state 3
    EXTERN         shift, and go to state 4
    STATIC         shift, and go to state 5
    AUTO           shift, and go to state 6
    REGISTER       shift, and go to state 7
    INLINE         shift, and go to state 8
    CONST          shift, and go to state 9
    RESTRICT       shift, and go to state 10
    VOLATILE       shift, and go to state 11
    BOOL           shift, and go to state 12
    CHAR           shift, and go to state 13
    SHORT          shift, and go to state 14
    INT            shift, and go to state 15
    LONG           shift, and go to state 16
    SIGNED         shift, and go to state 17
    UNSIGNED       shift, and go to state 18
    FLOAT          shift, and go to state 19
    DOUBLE         shift, and go to state 20
    VOID           shift, and go to state 21
    COMPLEX        shift, and go to state 22
    IMAGINARY      shift, and go to state 23
    STRUCT         shift, and go to state 24
    UNION          shift, and go to state 25
    ENUM           shift, and go to state 26
    ALIGNAS        shift, and go to state 27
    ATOMIC         shift, and go to state 28
    NORETURN       shift, and go to state 29
    STATIC_ASSERT  shift, and go to state 30
    THREAD_LOCAL   shift, and go to state 31

    var_declaration            go to state 32
    declaration                go to state 33
    declaration_specifiers     go to state 34
    storage_class_specifier    go to state 35
    type_specifier             go to state 36
    struct_or_union_specifier  go to state 37
    struct_or_union            go to state 38
    enum_specifier             go to state 39
    atomic_type_specifier      go to state 40
    type_qualifier             go to state 41
    function_specifier         go to state 42
    alignment_specifier        go to state 43
    static_assert_declaration  go to state 44
    translation_unit           go to state 45
    external_declaration       go to state 46
    function_definition        go to state 47


State 1

  148 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 148 (type_specifier)


State 2

  108 var_declaration: VAR • var_init_list ';'

    IDENTIFIER  shift, and go to state 48

    var_init_list  go to state 49
    var_init       go to state 50


State 3

  127 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 127 (storage_class_specifier)


State 4

  128 storage_class_specifier: EXTERN •

    $default  reduce using rule 128 (storage_class_specifier)


State 5

  129 storage_class_specifier: STATIC •

    $default  reduce using rule 129 (storage_class_specifier)


State 6

  131 storage_class_specifier: AUTO •

    $default  reduce using rule 131 (storage_class_specifier)


State 7

  132 storage_class_specifier: REGISTER •

    $default  reduce using rule 132 (storage_class_specifier)


State 8

  182 function_specifier: INLINE •

    $default  reduce using rule 182 (function_specifier)


State 9

  178 type_qualifier: CONST •

    $default  reduce using rule 178 (type_qualifier)


State 10

  179 type_qualifier: RESTRICT •

    $default  reduce using rule 179 (type_qualifier)


State 11

  180 type_qualifier: VOLATILE •

    $default  reduce using rule 180 (type_qualifier)


State 12

  142 type_specifier: BOOL •

    $default  reduce using rule 142 (type_specifier)


State 13

  134 type_specifier: CHAR •

    $default  reduce using rule 134 (type_specifier)


State 14

  135 type_specifier: SHORT •

    $default  reduce using rule 135 (type_specifier)


State 15

  136 type_specifier: INT •

    $default  reduce using rule 136 (type_specifier)


State 16

  137 type_specifier: LONG •

    $default  reduce using rule 137 (type_specifier)


State 17

  140 type_specifier: SIGNED •

    $default  reduce using rule 140 (type_specifier)


State 18

  141 type_specifier: UNSIGNED •

    $default  reduce using rule 141 (type_specifier)


State 19

  138 type_specifier: FLOAT •

    $default  reduce using rule 138 (type_specifier)


State 20

  139 type_specifier: DOUBLE •

    $default  reduce using rule 139 (type_specifier)


State 21

  133 type_specifier: VOID •

    $default  reduce using rule 133 (type_specifier)


State 22

  143 type_specifier: COMPLEX •

    $default  reduce using rule 143 (type_specifier)


State 23

  144 type_specifier: IMAGINARY •

    $default  reduce using rule 144 (type_specifier)


State 24

  152 struct_or_union: STRUCT •

    $default  reduce using rule 152 (struct_or_union)


State 25

  153 struct_or_union: UNION •

    $default  reduce using rule 153 (struct_or_union)


State 26

  168 enum_specifier: ENUM • '{' enumerator_list '}'
  169               | ENUM • '{' enumerator_list ',' '}'
  170               | ENUM • IDENTIFIER '{' enumerator_list '}'
  171               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  172               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 51
    '{'         shift, and go to state 52


State 27

  184 alignment_specifier: ALIGNAS • '(' type_name ')'
  185                    | ALIGNAS • '(' constant_expression ')'

    '('  shift, and go to state 53


State 28

  177 atomic_type_specifier: ATOMIC • '(' type_name ')'
  181 type_qualifier: ATOMIC •

    '('  shift, and go to state 54

    '('       [reduce using rule 181 (type_qualifier)]
    $default  reduce using rule 181 (type_qualifier)


State 29

  183 function_specifier: NORETURN •

    $default  reduce using rule 183 (function_specifier)


State 30

  261 static_assert_declaration: STATIC_ASSERT • '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 55


State 31

  130 storage_class_specifier: THREAD_LOCAL •

    $default  reduce using rule 130 (storage_class_specifier)


State 32

  112 declaration: var_declaration •

    $default  reduce using rule 112 (declaration)


State 33

  307 external_declaration: declaration •

    $default  reduce using rule 307 (external_declaration)


State 34

  109 declaration: declaration_specifiers • ';'
  110            | declaration_specifiers • init_declarator_list ';'
  308 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  309                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 56
    '('         shift, and go to state 57
    '*'         shift, and go to state 58
    ';'         shift, and go to state 59

    init_declarator_list  go to state 60
    init_declarator       go to state 61
    declarator            go to state 62
    direct_declarator     go to state 63
    pointer               go to state 64


State 35

  113 declaration_specifiers: storage_class_specifier • declaration_specifiers
  114                       | storage_class_specifier •
